# Android-sip-gateway

./: .gitignore  README.md  build-release.sh  build.gradle  build_tinymix_arm64.sh  chatplan_default.xml  gradle.properties  privapp-permissions-gateway.xml  settings.gradle  setup-keystore.sh  xiaomi_snapdragon.csv
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.js  index.html  style.css  tinycap  tinymix-arm64  tinyplay
app/src/main/cpp/: CMakeLists.txt  gsm_audio_jni.c
app/src/main/java/org/onetwoone/gateway/: BatteryLimitService.java  BatteryWatchdog.java  BootReceiver.java  DeviceMuteManager.java  GatewayAccount.java  GatewayApplication.java  GatewayCall.java  GatewayControlReceiver.java  GatewayInCallService.java  GsmAudioNative.java  GsmAudioPort.java  MainActivity.java  PjsipSipService.java  RootHelper.java  SipCallService.java  SmsHandler.java  WebConfigServer.java
app/src/main/java/org/pjsip/pjsua2/: AccountSipConfig.java  AudioDevInfo.java  AudioMediaPort.java  Call.java  CodecOpusConfig.java  CodecParamInfo.java  Endpoint.java  ExtraAudioDevice.java  MediaFrame.java  OnRejectedIncomingCallParam.java  SipTxOption.java  StreamInfo.java  (+3 more)
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
asterisk-config/: CRONTAB.example  README.md
asterisk-config/etc/asterisk/: extensions.conf  pjsip.conf  rtp.conf
asterisk-config/scripts/: gateway-notify.py  retry-failed-messages.py  update-certs.sh
pjsip-build/: README.md  config.conf
(+16 files in other folders)
